--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AbonZen - Suivez vos abonnements</title>
+    <title>AbonZen - Suivez vos abonnements dès maintenant</title>
     <style>
       body {
         font-family: "Segoe UI", sans-serif;
